revisao pontual de classes